# llm-inference-lab

./: .gitignore  README.md  pyproject.toml
llm_inference_lab/labs/: 01_llm_inference_optimize.ipynb
llm_inference_lab/summarization/: summarization.py  summarization_ray.py  summarization_w_polars.py
llm_inference_lab/tools/onnx_optimum/: onnx_optimum_converter.py
llm_inference_lab/tools/torch/: quantization.py  ray.py
llm_inference_lab/utils/: benchmark.py  download_models.py  models.py
