[tool.poetry]
name = "llm_inference_lab"
version = "0.1.0"
description = ""
authors = ["Brittany Pugh <brittanypugh@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.29.0"
torch = "^2.7.0"
transformers = "^4.51.3"
datasets = "^3.5.1"
onnx = "^1.17.0"
optimum = "^1.24.0"
ipykernel = "^6.29.5"
huggingface-hub = "^0.30.2"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.45.0"}
sentencepiece = "^0.2.0"
onnxruntime = "^1.21.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.8"
pydantic = "^2.11.4"
pyright = "^1.1.400"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
